Kernel/Graphics/AMD: init

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -71,6 +71,7 @@ set(KERNEL_SOURCES
     Devices/Generic/RandomDevice.cpp
     Devices/Generic/SelfTTYDevice.cpp
     Devices/Generic/ZeroDevice.cpp
+    Devices/GPU/AMD/NativeGraphicsAdapter.cpp
     Devices/GPU/Bochs/GraphicsAdapter.cpp
     Devices/GPU/Bochs/QEMUDisplayConnector.cpp
     Devices/GPU/Console/BootFramebufferConsole.cpp
