Kernel/Graphics/AMD: load from pci expansion rom

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -71,6 +71,7 @@ set(KERNEL_SOURCES
     Devices/Generic/RandomDevice.cpp
     Devices/Generic/SelfTTYDevice.cpp
     Devices/Generic/ZeroDevice.cpp
+    Devices/GPU/AMD/AtomBios.cpp
     Devices/GPU/AMD/NativeGraphicsAdapter.cpp
     Devices/GPU/Bochs/GraphicsAdapter.cpp
     Devices/GPU/Bochs/QEMUDisplayConnector.cpp
@@ -414,7 +415,7 @@ if ("${SERENITY_ARCH}" STREQUAL "x86_64")
 
         # TODO: Share these with the aarch64 build
         Interrupts/SpuriousInterruptHandler.cpp
-        kprintf.cpp        
+        kprintf.cpp
     )
 
     set(KERNEL_SOURCES
@@ -425,7 +426,7 @@ if ("${SERENITY_ARCH}" STREQUAL "x86_64")
 
     set(KERNEL_SOURCES
         ${KERNEL_SOURCES}
-        
+
         ${CMAKE_CURRENT_SOURCE_DIR}/Arch/x86_64/ASM_wrapper.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Arch/x86_64/CPU.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Arch/x86_64/CPUID.cpp
@@ -587,11 +588,11 @@ add_compile_options(-fstack-protector-strong)
 add_compile_options(-fno-exceptions)
 add_compile_options(-nostdlib)
 
-# Auto initialize trivial types on the stack, we use "pattern" as 
+# Auto initialize trivial types on the stack, we use "pattern" as
 # it's the only option portable across compilers going forward.
 #
 # This is designed to help avoid uninitialized variables bugs and
-# information disclosures coming from the kernel stack. 
+# information disclosures coming from the kernel stack.
 #
 # FIXME: It appears to conflict with something during the boot of the
 # aarch64 kernel, we should investigate and remove this special case.
